# eve-online-metrade

./: .gitignore  Launch EVE Metrade.cmd  Launch EVE Metrade.vbs  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/data/: seed.ts
src/domain/: format.ts  market.test.ts  market.ts
src/services/: api.ts
src/ui/: App.tsx  OpportunityTable.test.tsx  OpportunityTable.tsx
