[package]
name = "eve-metrade"
version = "0.1.0"
description = "EVE Online Jita-Amarr trading opportunities"
authors = ["Codex"]
edition = "2021"

[lib]
name = "eve_metrade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
csv = "1"
flate2 = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
urlencoding = "2"
webbrowser = "1"
